--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.1.3",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
