--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.0",
     "@tailwindcss/vite": "^4.0.0",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-router": "^7.1.3",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^4.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
