--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^4.1.0",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
+    "axios-hooks": "^5.1.0",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
