--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^4.1.0",
+    "@mui/material": "^6.4.6",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
     "axios-hooks": "^5.1.0",
