--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router": "^7.1.3",
     "tailwindcss": "^4.0.0",
